comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptates fugiat illo a assumenda, autem quia eveniet et laboriosam deserunt quas, repellat error facere. Rem tempora repellat corporis nisi quis?</p>
         </article>
         <article>
-            <h2>Artigo 0002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur porro id in error, recusandae velit odio non molestias earum deleniti nobis blanditiis necessitatibus nostrum aperiam repudiandae asperiores nesciunt veritatis esse!</p>
         </article>
     </main>
 </body>
